--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <div class="cta">
             <a href="#" class="cta-button">Start Your Journey</a>
             <br>
-            <a href="https://github.com/yourusername/me-by-suprlab" class="github-link" target="_blank">View on GitHub</a>
+            <a href="https://github.com/suprlab/me" class="github-link" target="_blank">View on GitHub</a>
         </div>
 
         <footer>
