--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 
     <style>
         :root {
-            --primary-color: #268bd2; /* Blue */
-            --secondary-color: #fdf6e3; /* Base3 */
-            --text-color: #657b83; /* Base00 */
-            --background-color: #eee8d5; /* Base2 */
+            --primary-color: #7aa2f7; /* Blue */
+            --secondary-color: #f0f4ff; /* Lighter background for light mode */
+            --text-color: #1a1b26; /* Dark text */
+            --background-color: #ffffff; /* Light background */
         }
 
         [data-theme="dark"] {
-            --primary-color: #268bd2; /* Blue */
-            --secondary-color: #002b36; /* Base03 */
-            --text-color: #839496; /* Base0 */
-            --background-color: #073642; /* Base02 */
+            --primary-color: #7aa2f7; /* Blue */
+            --secondary-color: #1a1b26; /* Background */
+            --text-color: #a9b1d6; /* Foreground/Text */
+            --background-color: #1a1b26; /* Background */
         }
         
         body {
