--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </div>
 
         <div class="cta">
-            <a href="#" class="cta-button">Start Your Journey</a>
+            <a href="#" class="cta-button">Coming Soon</a>
             <br>
             <a href="https://github.com/suprlab/me" class="github-link" target="_blank">View on GitHub</a>
         </div>
